[gd_scene load_steps=3 format=2]

[ext_resource path="res://hud/plant_queue/CropBadge.tscn" type="PackedScene" id=1]
[ext_resource path="res://hud/plant_queue/PlantQueueDisplay.gd" type="Script" id=2]

[node name="PlantQueueDisplay" type="Node2D"]
script = ExtResource( 2 )

[node name="CropBadge0" parent="." instance=ExtResource( 1 )]
position = Vector2( 72, 72 )

[node name="CropBadge1" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 192 )
scale = Vector2( 0.75, 0.75 )

[node name="CropBadge2" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 296 )
scale = Vector2( 0.75, 0.75 )
